:bulb: Docs: Swagger done | all routes set
