# back-pizza-store/src/docs/schemas/cart.js
@@ -1,0 +1,5 @@
+module.exports = {
+    user_id: 2, 
+    meal_id: 1, 
+    quantity: 2
+}
