# back-pizza-store/src/docs/schemas/order_items.js
@@ -1,0 +1,5 @@
+module.exports = {
+    order_id: 1, 
+    meal_id: 1, 
+    quantity: 2
+}
