# back-pizza-store/src/routes/orderItems.routes.js
@@ -10,10 +10,32 @@ const orderItemsController = new OrderItemsController
 orderItemsRoutes.use(ensureAuthenticated)
 // orderItemsRoutes.use(verifyAuthorization("admin", "customer"))
 
-orderItemsRoutes.post('/', orderItemsController.create)
+orderItemsRoutes.post('/', 
+    /*
+        #swagger.description = 'Endpoint to create a new user.'
+        #swagger.parameters['order_items'] = {
+            in: 'body',
+            description: 'User information',
+            required: true,
+            schema: { $ref: '#/definitions/Order_Items' }
+        } 
+    */ 
+    orderItemsController.create
+)
 orderItemsRoutes.get('/', orderItemsController.index)
 orderItemsRoutes.get('/:id', orderItemsController.show)
-orderItemsRoutes.put('/:id', orderItemsController.update)
+orderItemsRoutes.put('/:id',
+    /*
+        #swagger.description = 'Endpoint to create a new user.'
+        #swagger.parameters['order_items'] = {
+            in: 'body',
+            description: 'User information',
+            required: true,
+            schema: { $ref: '#/definitions/Order_Items' }
+        } 
+    */ 
+   orderItemsController.update
+)
 orderItemsRoutes.delete('/:id', orderItemsController.delete)
 
 module.exports = orderItemsRoutes
